--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-# Trabalho de FPAA
-
-Na segunda parte da disciplina, estamos focados no estudo de problemas intratáveis, tipicamente pertencente às classes NP, e nas técnicas de projeto de algoritmos que podem nos ajudar a encontrar soluções de compromisso adequadas. Leia com cuidado o problema descrito a seguir:
+# Trabalho de Fundamentos de Projeto e Análise de Algoritmos
 
 “Uma empresa de distribuição e logística possui uma frota composta por N caminhões. Semanalmente, esta empresa organiza suas entregas em M rotas, as quais devem ser distribuídas entre os caminhões disponíveis. A empresa deseja fazer a distribuição de maneira que cada caminhão cumpra a mesma quilometragem, evitando assim que ao final do período existam caminhões ociosos enquanto outros ainda estão executando várias rotas. Se não for possível cumprir a mesma quilometragem, que a diferença entre a quilometragem dos caminhões seja a menor possível, diminuindo o problema.
 
@@ -16,24 +14,12 @@ Caminhão 1: rotas 35, 33, 32, 42 - total 142km
 Caminhão 2: rotas 35, 19, 26 - total 80km
 Caminhão 3: rotas 23, 34, 21 - total 78km”
 
-Está sendo fornecido, junto a este enunciado, um "gerador de problemas", o qual retorna um conjunto de rotas geradas a partir de uma semente aleatória fixa.
+Neste repositório, há 4 métodos de solução comuns para o problema apresentado.
 
-As tarefas do seu grupo de trabalho são:
+Estes são: backtracking, algoritmo guloso, divisão e conquista e programação dinâmica.
 
-a) Projetar e implementar uma solução para o problema apresentado utilizando backtracking. A solução deve incluir uma estratégia de poda para soluções não promissoras.
+Best-route is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 
-a1) Utilizando o código do "gerador de problemas" fornecido, medir o tempo de execução de conjuntos de tamanho crescente, até atingir um tamanho T que não consiga ser resolvido em até 30 segundos pelo algoritmo. Este teste deve ser realizado para 3 caminhões e começando com 6 rotas. Na busca do tempo limite de 30 segundos, faça o teste com 10 conjuntos de cada tamanho, contabilizando a média das execuções.
+Best-route is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
 
-b) Projetar e implementar soluções para o problema apresentado utilizando algoritmo guloso. Neste caso, o grupo deve utilizar pelo menos duas estratégias gulosas diferentes na implementação, comparando seus resultados.
-
-b1) Para este teste, utilize os mesmos conjuntos de tamanho T utilizados no backtracking. Em seguida, aumente os tamanhos dos conjuntos de T em T até atingir o tamanho 10T, sempre executando 10 testes de cada tamanho para utilizar a média.
-
-c) Projetar e implementar uma solução para o problema apresentado utilizando divisão e conquista. O grupo deve decidir se vai utilizar o método demonstrado em aula ou outro à escolha.
-
-c1) Neste caso, utilize os mesmos conjuntos de tamanho T utilizados no backtracking.
-
-d) Projetar e implementar uma solução para o problema apresentado utilizando programação dinâmica. O grupo deve decidir se vai utilizar o método demonstrado em aula ou outro à escolha.
-
-d1) Aqui, utilize os mesmos conjuntos de teste do algoritmo guloso.
-
-e) Criar um relatório técnico sobre as implementações. Este relatório deve conter (i) as explicações sobre as decisões tomadas e o funcionamento de cada algoritmo implementado e (ii) a comparação de resultados obtidos pelas implementações. Esta comparação deve se dar tanto em relação ao tempo de execução como em relação à qualidade do resultado. Evite fazer comparações rasas ou simplesmente demonstrar números. O trabalho pressupõe considerações acerca do problema, das técnicas utilizadas, dos resultados esperados e obtidos.
+See LICENSE for more information.
